<resources>
    <string name="app_name">AirPrima</string>

    <string name="notification_channel_name">CHANNEL_AP_YDLD</string>
    <string name="notification_channel_description">Notification channel for AirPrima</string>

    <string name="save">Speichern</string>
    <string name="cancel">Abbrechen</string>
    <string name="select">Auswählen</string>
    <string name="yes">Ja</string>
    <string name="no">Nein</string>
    <string name="connecting">Verbinden</string>
    <string name="scan">Scannen</string>
    <string name="pair">Koppeln</string>

    <string name="finedust">Feinstaub</string>
    <string name="pm_2_5">PM 2.5</string>
    <string name="pm_10">PM 10</string>
    <string name="temperature">Temperatur</string>
    <string name="humidity">Luftfeuchtigkeit</string>
    <string name="overview">Übersicht</string>

    <string name="day">Tag</string>
    <string name="calendar_week">Kalenderwoche</string>
    <string name="calendar_week_shortform">KW</string>
    <string name="week">Woche</string>
    <string name="month">Monat</string>
    <string name="year">Jahr</string>

    <string name="good">Gut</string>
    <string name="fair">Angemessen</string>
    <string name="moderate">Mäßig</string>
    <string name="poor">Schlecht</string>
    <string name="very_poor">Sehr Schlecht</string>
    <string name="extremely_poor">Extrem Schlecht</string>

    <string name="no_measurements">Keine Messungen vorhanden!</string>
    <string name="no_data">Keine Messwerte!</string>
    <string name="no_data_long">Für diesen Standort gibt es noch keine Messwerte!</string>
    <string name="date_button_empty">%1$s...</string>

    <string name="humidity_value">%1$s%%</string>
    <string name="temperature_value_celsius">%1$s°C</string>

    <string name="january_short">Jan.</string>
    <string name="february_short">Feb.</string>
    <string name="march_short">März</string>
    <string name="april_short">Apr.</string>
    <string name="may_short">Mai</string>
    <string name="june_short">Jun.</string>
    <string name="july_short">Jul.</string>
    <string name="august_short">Aug.</string>
    <string name="september_short">Sept.</string>
    <string name="october_short">Okt.</string>
    <string name="november_short">Nov.</string>
    <string name="december_short">Dez.</string>

    <string name="menu_info">Info</string>
    <string name="menu_home">Home</string>

    <string name="main_mobile">Mobiles Messen</string>
    <string name="main_stationary">Stationäres Messen</string>

    <string name="information_product">Produkt Infos</string>
    <string name="information_finedust">Feinstaub Infos</string>
    <string name="product_info_title">Produktinformationen</string>
    <string name="product_info_content">Die AirPrima Sensorstation ermöglicht es, die beiden Feinstaubpartikelgrößen PM10 und PM2.5, die Temperatur und die Luftfeuchtigkeit zu messen. Sie können die Sensorstation sowohl im Inneren Ihres Hauses wie auch draußen im Freien verwenden. Mithilfe einer Powerbank kann die gesamte Station tragbar gemacht werden, um auch im Straßenverkehr die Feinstaubbelastung zu messen. Per Bluetooth werden die Messwerte zwischen der Sensorstation und dieser App übertragen. Die App visualisiert die empfangenen Messwerte, sowie deren Entwicklung über verschiedene Zeiträume. Werden Feinstaubgrenzwerte überschritten, werden sie darüber benachrichtigt. Sie können zwischen Stationärem- und Mobilem-Messen wählen. Mit Stationärem-Messen kann die Entwicklung der Werte an einem Standort über einen längeren Zeitraum verfolgt werden. Bei Mobilem-Messen werden keine Daten gespeichert.</string>
    <string name="finedust_info_title1">Feinstaub</string>
    <string name="finedust_info_content1">Feinstaub bezeichnet Verunreinigungen in der Luft (z.B. Abgase, Pollen, Ruß, etc.) und setzt sich aus vielen unterschiedlichen Bestandteilen zusammen. Von Interesse sind dabei besonders die Feinstaubpartikel der Größe PM10 und PM2.5 (Größe in μm), die als gesundheitsgefährdend eingestuft werden, da diese nicht von der Nase abgefangen werden und in die Bronchien und Lungenbläschen eindringen können.</string>
    <string name="finedust_info_title2">Grenzwerte</string>
    <string name="finedust_info_content2">Die WHO empfielt folgende Grenzwerte:\n\n PM10:\n 	- Jahresmittel = 20 µg/m³\n 	- Tagesmittel = 50 µg/m³ \n\n PM2.5: \n 	- Jahresmittel = 10 µg/m³\n 	- Tagesmittel = 25 µg/m³\n</string>

    <string name="stationary_connect">Mit Sensor verbinden</string>
    <string name="stationary_old_data">Daten einsehen</string>

    <string name="locations_title">Ihre Standorte</string>
    <string name="locations_button">Neuen Standort hinzufügen</string>

    <string name="location_edit_title">Neuer Standort</string>
    <string name="location_edit_label1">Standortname:</string>
    <string name="location_edit_label2">Messhäufigkeit [Minuten]:</string>
    <string name="location_edit_hint1">Name</string>
    <string name="location_edit_hint2">Zahl zwischen 1 und 60</string>
    <string name="location_edit_delete">Standort löschen</string>
    <string name="location_edit_delete_title">Standort löschen</string>
    <string name="location_edit_delete_message">Wollen Sie wirklich diesen Standort löschen?</string>
    <string name="location_edit_empty_name">Der Standortname darf nicht leer sein!</string>
    <string name="location_edit_empty_freq">Die Messhäufigkeit darf nicht leer sein!</string>
    <string name="location_edit_freq_range">Die Messhäufigkeit darf nur zwischen 1min und 60min sein!</string>

    <string name="development_title_day">%1$s Tagesentwicklung</string>
    <string name="development_title_week">%1$s Wochenentwicklung</string>
    <string name="development_title_month">%1$s Monatsentwicklung</string>
    <string name="development_title_year">%1$s Jahresentwicklung</string>

    <string name="dialog_datepicker_title_day">Wählen Sie einen Tag aus:</string>
    <string name="dialog_datepicker_title_week">Wählen Sie eine Kalenderwoche aus:</string>
    <string name="dialog_datepicker_title_month">Wählen Sie einen Monat aus:</string>
    <string name="dialog_datepicker_title_year">Wählen Sie ein Jahr aus:</string>

    <string name="overview_title">Neuste Messung\n%1$s</string>
    <string name="overview_pm2_5">PM 2.5\n%1$s</string>
    <string name="overview_pm10">PM 10\n%1$s</string>
    <string name="overview_temp">Temperatur\n%1$s</string>
    <string name="overview_humid">Luftfeuchtigkeit\n%1$s</string>

    <string name="humidity_startpage_title">Luftfeuchtigkeit\n%1$s</string>

    <string name="temperature_startpage_title">Temperatur\n%1$s</string>
    <string name="temperature_startpage_value_fahrenheit">%1$s°F</string>

    <string name="finedust_startpage_title">Feinstaub\n%1$s</string>
    <string name="finedust_startpage_2_5">PM 2.5\n%1$s µg/m³</string>
    <string name="finedust_startpage_10">PM 10\n%1$s µg/m³</string>

    <string name="bt_connect_title">Mit Sensorstation verbinden</string>
    <string name="bt_connect_active">Bluetooth ist eingeschaltet</string>
    <string name="bt_connect_inactive">Bluetooth ist ausgeschaltet</string>
    <string name="bt_connect_paired_devices">Gekoppelte Geräte</string>
    <string name="bt_connect_available_devices">Geräte in Reichweite</string>
    <string name="bt_connect_device_address">[%1$s]</string>
    <string name="bt_connect_no_geolocation">Standortzugriff ist notwendig!</string>
    <string name="bt_connect_pairing_success">Koppelung erfolgreich!</string>
    <string name="bt_connect_pairing_cancel">Koppelung fehlgeschlagen!</string>
    <string name="bt_connect_connection_failed">Verbindung fehlgeschlagen!</string>
    <string name="bt_connect_thread_dead">Sie können sich nun erneut verbinden!</string>

    <string name="pie_chart_title">%1$s - Einordnung der Tage im Jahr\n[European Air Quality Index]</string>
    <string name="pie_chart_legend_name">EAQI Level</string>

    <string name="eaqi_classification_title">Neuste Messung in EAQI eingeordnet [%1$s]</string>
    <string name="eaqi_classification_pm_2_5">PM 2.5 Wert - %1$s</string>
    <string name="eaqi_classification_pm_10">PM 10 Wert - %1$s</string>
    <string name="eaqi_classification_eaqi_level">EAQI Level</string>
    <string name="eaqi_classification_pm_2_5_good">0-10</string>
    <string name="eaqi_classification_pm_2_5_fair">10-20</string>
    <string name="eaqi_classification_pm_2_5_moderate">20-25</string>
    <string name="eaqi_classification_pm_2_5_poor">25-50</string>
    <string name="eaqi_classification_pm_2_5_very_poor">50-75</string>
    <string name="eaqi_classification_pm_2_5_extremely_poor">75-800</string>
    <string name="eaqi_classification_pm_10_good">0-20</string>
    <string name="eaqi_classification_pm_10_fair">20-40</string>
    <string name="eaqi_classification_pm_10_moderate">40-50</string>
    <string name="eaqi_classification_pm_10_poor">50-100</string>
    <string name="eaqi_classification_pm_10_very_poor">100-150</string>
    <string name="eaqi_classification_pm_10_extremely_poor">150-1200</string>

    <string name="min_max_title">%1$s - Min und Max Werte</string>
    <string name="min_max_upper_title">%1$s Minimum</string>
    <string name="min_max_lower_title">%1$s Maximum</string>
    <string name="min_max_time_period_button">Zeitraum auswählen</string>
    <string name="min_max_finedust_values">PM2.5: %1$s µg/m³\nPM10: %2$s µg/m³</string>
    <string name="dialog_time_period_title">Wählen Sie einen Zeitraum aus:</string>

    <string name="finedust_notification_title">Kritischer Feinstaubwert</string>
    <string name="finedust_notification_content">Der PM%1$s Wert beträgt %2$s µg/m³</string>

</resources>
