<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/dialog_time_period_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/dialog_time_period_title"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/dialog_time_period_day"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FAE36D"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/day"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/dialog_time_period_week"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FAD71F"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/calendar_week"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/dialog_time_period_month"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FAE36D"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/month"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/dialog_time_period_year"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FAD71F"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/year"
        android:textSize="30sp" />

    <Button
        android:id="@+id/dialog_time_period_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:gravity="center"
        android:text="@string/cancel" />

</LinearLayout>
