<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_humidity_startpage"
    android:orientation="vertical"
    tools:context=".visualization.fragments.FragmentHumidityStartpage">

    <TextView
        android:id="@+id/humidity_startpage_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/humidity_startpage_title"
        android:textSize="27sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/humidity_startpage_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="70dp"
        android:text="@string/humidity_value"
        android:textSize="50sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/humidity_startpage_no_data"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/no_measurements"
        android:textSize="27sp"
        android:textStyle="bold" />

</LinearLayout>