<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".VisualizationActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/button_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/button_overview"
            android:contentDescription="@string/overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_binocular_icon_26"
            android:background="@color/colorButtonBarActive"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"/>

        <ImageButton
            android:id="@+id/button_finedust"
            android:contentDescription="@string/finedust"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_feinstaub"
            android:background="@color/colorButtonBarInactive"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"/>

        <ImageButton
            android:id="@+id/button_temperature"
            android:contentDescription="@string/temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_thermometer"
            android:background="@color/colorButtonBarInactive"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"/>

        <ImageButton
            android:id="@+id/button_humidity"
            android:contentDescription="@string/humidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_humidity"
            android:background="@color/colorButtonBarInactive"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"/>

    </LinearLayout>

    <RelativeLayout
        xmlns:attrs="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal" >

        <androidx.viewpager.widget.ViewPager
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/pagerReadings"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <com.rd.PageIndicatorView
            android:id="@+id/pageIndicatorView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="30dp"
            app:piv_animationType="scale"
            app:piv_dynamicCount="true"
            app:piv_interactiveAnimation="true"
            app:piv_selectedColor="@color/colorPageIndicatorSelected"
            app:piv_unselectedColor="@color/colorPageIndicatorUnselected"
            app:piv_viewPager="@id/pagerReadings"
            attrs:piv_padding="12dp"
            attrs:piv_radius="8dp" />

    </RelativeLayout>

</LinearLayout>